cluster_eks/igw.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main_vpc.id
  
    tags = {
        Name = "${local.project}-igw"
        project = local.project
    }
}
